logs/mobility/build.make.021.log.stderr
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp: In function ‘void print(std::string)’:
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:42:1: error: ‘infoLogPublisher’ was not declared in this scope
 infoLogPublisher.publish(msg);
 ^
make[2]: *** [CMakeFiles/mobility.dir/src/DropOffController.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
